<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     android:layout_gravity="center|center_vertical"
    android:background="@drawable/asd"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".WelcomeGermana" >
    
<Button
        android:id="@+id/button4"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:textColor="@color/platinum"
        android:background="@drawable/big_grey_up"
        android:layout_alignBaseline="@+id/button3"
        android:layout_alignBottom="@+id/button3"
        android:layout_alignRight="@+id/button2"
        android:onClick="WelcomeTimpGermana"
        android:text="@string/timp_liber_germana" />

    <Button
        android:id="@+id/button3"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:layout_alignRight="@+id/button1"
        android:layout_below="@+id/button1"
        android:layout_marginTop="49dp"
        android:textColor="@color/platinum"
        android:background="@drawable/big_grey_up"
         android:onClick="WelcomeOrientareGermana"
        android:text="@string/orientare_germana" />

    <Button
        android:id="@+id/button2"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:layout_above="@+id/button3"
        android:textColor="@color/platinum"
        android:layout_alignParentRight="true"
        android:layout_marginRight="31dp"
        android:background="@drawable/big_grey_up"
         android:onClick="WelcomeAdmitereGermana"
        android:text="@string/admitere_germana" />

    <Button
        android:id="@+id/button1"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:layout_alignParentTop="true"
        android:layout_marginRight="20dp"
        android:layout_marginTop="67dp"
        android:textColor="@color/platinum"
        android:layout_toLeftOf="@+id/button2"
        android:background="@drawable/big_grey_up"
         android:onClick="WelcomeDespreGermana"
        android:text="@string/despre_germana" />

    <Button
        android:id="@+id/button5"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:layout_below="@+id/button4"
        android:textColor="@color/platinum"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp"
        android:background="@drawable/big_grey_up"
         android:onClick="WelcomeAlteleGermana"
        android:text="@string/altele_germana" />
    
</RelativeLayout>
