<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center|center_vertical"
   android:background="@drawable/asd"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AlteleRomana" >

    
     <Button
        android:id="@+id/button4"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:textColor="@color/platinum"
        android:background="@drawable/big_grey_up"
        android:layout_alignBaseline="@+id/button3"
        android:layout_alignBottom="@+id/button3"
        android:layout_alignRight="@+id/button2"
        android:text="@string/burse_romana" 
        android:onClick="AlteleBurseRomana" />

    <Button
        android:id="@+id/button3"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:textColor="@color/platinum"
        android:layout_alignRight="@+id/button1"
        android:layout_below="@+id/button1"
        android:layout_marginTop="49dp"
        android:background="@drawable/big_grey_up"
        android:text="@string/restante_romana" 
        android:onClick="AlteleRestanteRomana" />

    <Button
        android:id="@+id/button2"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:textColor="@color/platinum"
        android:layout_above="@+id/button3"
        android:layout_alignParentRight="true"
        android:layout_marginRight="31dp"
        android:background="@drawable/big_grey_up"
        android:text="@string/regulament_romana"
        android:onClick="AlteleRegulamentRomana"  />

    <Button
        android:id="@+id/button1"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:layout_alignParentTop="true"
        android:layout_marginRight="20dp"
        android:layout_marginTop="67dp"
        android:textColor="@color/platinum"
        android:layout_toLeftOf="@+id/button2"
        android:background="@drawable/big_grey_up"
        android:text="@string/contact_romana"
        android:onClick="AlteleContactRomana" />

</RelativeLayout>
